added fading in intro for tree

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
+    <script src="https://code.createjs.com/1.0.0/tweenjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PreloadJS/1.0.1/preloadjs.js"></script>
     <script src="./app.js"></script>
 
 </head>
 <body onload="init();">
     <div class="canvasDiv">
-        <canvas id="demoCanvas">
+        <canvas id="demoCanvas" width=500 height=300>
             Your Browser Doesnt Support Canvas
+
+            <script src="stage.js" />
         </canvas>
     </div>
 </body>
